# AI-Animation-Redraw

./: .env.example  .gitignore  HACKATHON.md  README.md  config.yaml  pyproject.toml  run.py
app/: config.py  main.py  models.py
app/routers/: files.py  pipeline.py  project.py
app/services/: frame_extractor.py  grid_composer.py  grid_redrawer.py  grid_splitter.py  pipeline_manager.py  runninghub_client.py  threeview_generator.py  video_analyzer.py  video_assembler.py
app/utils/: ffmpeg.py  file_manager.py
static/: index.html
static/css/: style.css
static/js/: app.js
